--- a/popup.css
+++ b/popup.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    padding: 0;
+    padding: 4px;
     width: 180px;
     background: #ffffff;
     color: #000000;
@@ -20,7 +20,7 @@ body {
     outline: none;
 }
 #stack {
-    margin: 10px 0 0 0;
+    margin: 6px 0 0 0;
     padding: 1px 0 0 0;
     border: 1px transparent;
     max-height: 600px;
